--- a/app/styles/_report.scss
+++ b/app/styles/_report.scss
@@ -26,6 +26,9 @@
 }
 
 #reportSolarMap-container, #reportAerialMap-container {
-  width:200px;
-  height: 200px;
+  // width:200px;
+  // height: 200px;
+  // margin-left:25%;
+  // margin-right: 25%;
+  margin-top:20px;
 }
